<resources>
    <string name="app_name">The Secret World - Signets</string>
    <string name="signet_info">Basic information</string>
    <string name="signet_overview">Signet overview</string>
    <string name="signet_quests">Quests</string>
    <string name="signet_farming">Farming locations</string>
    <string name="signet_maps">Maps</string>
    <string name="what_are_signets">> What are Signets?</string>
    <string name="what_are_signets_close">CLOSE What are Signets? &lt;</string>
    <string name="basic_information_part2">Signets are divided into &lt;font color=&quot;#ff4444&quot;&gt;three types&lt;/font&gt;: &lt;font color=&quot;#99cc00&quot;&gt;green&lt;/font&gt;, 
        &lt;font color=&quot;#33b5b5&quot;&gt;blue&lt;/font&gt; and &lt;font color=&quot;#aa66cc&quot;&gt;purple&lt;/font&gt;. It takes 
        ten identical green signets to form a blue signet of the same name and ten identical blue signets to form a purple signet.&lt;br&gt;(Hint: 
        You need 100 green signets with the same name to build one purple signet)</string>
    <string name="basic_information_part3">(Hint: an overview of all available signets can be found in the &lt;font color=&quot;#ff4444&quot;&gt;
        [App Main Menu] > [Signet Overview]&lt;/font&gt;)	</string>
    <string name="attach">> Signet Attaching</string>
    <string name="attach_close"> CLOSE Signet Attaching &lt;</string>
    <string name="basic_information_part4">To attach a signet, place the item and the signet in the &lt;font color=&quot;#ff4444&quot;&gt;
        Assembly Window&lt;/font&gt; and click the &lt;font color=&quot;#ff4444&quot;&gt;ASSEMBLE&lt;/font&gt; 
        button.&lt;br&gt;(Hint: The item must be at &lt;font color=&quot;#ff4444&quot;&gt;full durability&lt;/font&gt;)&lt;br&gt;(Hint: Detailed description of each signet and their restrictions can be found in the &lt;font 
        color=&quot;#ff4444&quot;&gt;[App Main Menu] > [Signet Overview]&lt;/font&gt;)</string>
    <string name="basic_information_part5">If an item contains a signet you can overwrite it with a new one.&lt;br&gt;(Hint: The old signet will be 
        &lt;font color=&quot;#ff4444&quot;&gt;destroyed&lt;/font&gt;)</string>
    <string name="where_do_i_get_signets">> Where do I get Signets?</string>
    <string name="where_do_i_get_signets_close"> CLOSE Where do I get Signets? &lt;</string>
    <string name="find_signets_text">&lt;font color=&quot;#ff4444&quot;&gt;Signets cannot be crafted&lt;/font&gt;, but there are three possibilities to get signets:&lt;br&gt;
        > dropped by &lt;font color=&quot;#ff4444&quot;&gt;Nightmare and Lair mobs&lt;/font&gt;&lt;br&gt;
        (Hint: The location of these mobs can be found in the &lt;font color=&quot;#ff4444&quot;&gt;[App Main Menu] > 
        [Farming Locations]&lt;/font&gt;)&lt;br&gt;&lt;br&gt;> &lt;font color=&quot;#ff4444&quot;&gt;Quests&lt;/font&gt;&lt;br&gt;
        (Hint: One &lt;font color=&quot;#ff4444&quot;&gt;Signet Reward Bag&lt;/font&gt; after completion)
        &lt;br&gt;(Hint: Which quests guarantee 
        signets and their locations can be found in the &lt;font color=&quot;#ff4444&quot;&gt;[App Main Menu] > 
        [Quests]&lt;/font&gt;)&lt;br&gt;&lt;br&gt;> &lt;font color=&quot;#ff4444&quot;&gt;B&amp;D Bank&lt;/font&gt; or 
        &lt;font color=&quot;#ff4444&quot;&gt;Ealdwic Post Office&lt;/font&gt; in 
        London. 
        [BUY] > [(ItemType): Upgrade] > [(SubType): Signet]</string>
    <string name="solomon_king_titel">> Solomon Is. (Kingsmouth)</string>
    <string name="solomon_savage_titel">> Solomon Is. (Savage Coast)</string>
    <string name="solomon_blue_titel">> Solomon Is. (Blue Mountain)</string>
    <string name="egypt_scorched_titel">> Egypt (Scorched Desert)</string>
    <string name="egypt_sun_titel">> Egypt (City of the Sun God)</string>
    <string name="trans_farm_titel">> Trans. (Besieged Farmlands)</string>
    <string name="trans_forest_titel">> Trans. (Shadowy Forest)</string>
    <string name="trans_fangs_titel">> Trans. (Carpathian Fangs)</string>
    <string name="framing_locations_go_to_map_activity">> Open Map &lt;</string>
    <string name="basics_farming_locations">> Basics</string>
    <string name="farming_locations_close"> CLOSE Basics &lt;</string>
    <string name="basics_farming_locations_text">Every area in TSW has &lt;font color=&quot;#ff4444&quot;&gt;one or more Nightmare and one Lair mobs 
        zone&lt;/font&gt;. The mobs have a &lt;font color=&quot;#ff4444&quot;&gt;special buff&lt;/font&gt; 
        that indicates their Nightmare/Lair status: </string>
    <string name="zone_details_text">Mobs in the &lt;font color=&quot;#ff4444&quot;&gt;Nightmare zone&lt;/font&gt; can be soloed&lt;br&gt; 
(Hint: Mobs have 7k to 21k health points)&lt;br&gt; 
(Hint: QL10 gear with blue and/or purple parts)&lt;br&gt;&lt;br&gt;
Mobs in the &lt;font color=&quot;#ff4444&quot;&gt;Lair zone&lt;/font&gt; should be done in a group&lt;br&gt;
(Hint: Mobs have 8k to 71k health points)&lt;br&gt;&lt;br&gt;
The mobs drop &lt;font color=&quot;#ff4444&quot;&gt;mostly minor signets&lt;/font&gt;, but there is a small chance of a major signet drop. 
Furthermore Lair mobs drop more major signets than nightmare mobs. There is also a possibility to summon Lair bosses that 
drop &lt;font color=&quot;#33b5b5&quot;&gt;blue&lt;/font&gt; or even &lt;font color=&quot;#aa66cc&quot;&gt;purple&lt;/font&gt; signets.
As the mobs in every zone have different skills you should visit each of them and find out which farming location 
works best for you and your group. (Hint: Nightmare and Lair mobs are &lt;font color=&quot;#ff4444&quot;&gt;immune 
to hinder and impair effects&lt;/font&gt;)</string>
    <string name="kingsmouth_farming_locations">> Kingsmouth</string>
    <string name="kingsmouth_farming_locations_close"> CLOSE Kingsmouth &lt;</string>
    <string name="map_kingsmouth_nm_text">&lt;font color=&quot;#ff4444&quot;&gt;Nightmare Zone
        &lt;/font&gt; [A]&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Location:&lt;/font&gt; South of airport&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Coordinates:&lt;/font&gt; 880, 650&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:&lt;/font&gt;
        Kingsmouth Municipal Airport&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Corpse Clinger (14k HP)&lt;br&gt;
        [Single]Mouldering Bones (14k HP)&lt;br&gt;
        [Single]Pustular Undead (14k HP)&lt;br&gt;
        [Single]Guts Trawler (21k HP)&lt;br&gt;
        [Single]Freight Smasher (22k HP)&lt;br&gt;
        [Single]Freight Stomper (22k HP)&lt;br&gt;
        [Group]Weekend Warrior (3.6k HP)</string>
    <string name="map_kingsmouth_nm_text2">&lt;font color=&quot;#ff4444&quot;&gt;Nightmare Zone
        &lt;/font&gt; [B]&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Location:&lt;/font&gt; East of Pyramid Point&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Coordinates:&lt;/font&gt; 830, 140&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:&lt;/font&gt;
        Journey’s End&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Fathomless Sea Scraper (14k HP)&lt;br&gt;
        [Single]Fathomless Sea Seer (14k HP)&lt;br&gt;
        [Single]Fathomless Sea Slitter (14k HP)&lt;br&gt;
        [Single]Savage Fathom (16k HP)</string>
    <string name="map_kingsmouth_lair_text">        &lt;font color=&quot;#ff4444&quot;&gt;
        Lair Zone
        &lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Location:&lt;/font&gt;
        North of airport
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Coordinates:&lt;/font&gt;
        880, 890
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:&lt;/font&gt;
        Kingsmouth Municipal Airport&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Helrisen Seidkona (43k HP)&lt;br&gt;
        [Single]Helrisen Volva (48k HP)&lt;br&gt;
        [Single]Helrisen Hird (52k HP)&lt;br&gt;
        [Single]Helrisen Leidanger (52k HP)&lt;br&gt;
        [Single]Keelhauled (48k HP)</string>
    <string name="savage_farming_locations">> Savage Coast</string>
    <string name="savage_farming_locations_close"> CLOSE Savage Coast &lt;</string>
    <string name="map_savage_nm_text">&lt;font color=&quot;#ff4444&quot;&gt;Nightmare Zone&lt;/font&gt; [A]
        &lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Location:&lt;/font&gt; Northwest to Suicide Bluff&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Coordinates:&lt;/font&gt; 550, 190&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:
        &lt;/font&gt; The Fairgrounds(South)&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]New Flesh (15k HP)&lt;br&gt;
        [Single]Lab Meat (25k HP)&lt;br&gt;
        [Pair]Tainted Culture (7.5k HP)&lt;br&gt;
        [Group]Consumed Culture (3.7k HP)</string>
    <string name="map_savage_lair_text">        &lt;font color=&quot;#ff4444&quot;&gt;
        Lair Zone
        &lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Location:&lt;/font&gt; South of Overlook Motel
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Coordinates:&lt;/font&gt; 780, 700
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:&lt;/font&gt; The Fairgrounds(North)
        &lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Filthiopath (71k HP)&lt;br&gt;
        [Single]Filthy Regression (71k HP)&lt;br&gt;
        [Single]Slur (48k HP) (+ Group)&lt;br&gt;
        [Group]Filth-Changed (7.9 HP)&lt;br&gt;
        [Group]Obscenity (7.9k HP)</string>
    <string name="blue_farming_locations">> Blue Mountain</string>
    <string name="blue_farming_locations_close"> CLOSE Blue Mountain &lt;</string>
    <string name="map_blue_nm_text">&lt;font color=&quot;#ff4444&quot;&gt;Nightmare Zone&lt;/font&gt; [A]
        &lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Location:&lt;/font&gt; The Quarry&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;
        Coordinates:&lt;/font&gt; 600, 500&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:
        &lt;/font&gt; Wabanaki Sacred Site&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Ellri Seaweaver (13k HP)&lt;br&gt;
        [Single]Draugslave (14k HP)&lt;br&gt;
        [Single]Ellri Destroyer (16k HP) &lt;br&gt;
        [Single]Ellri Cleaver (18k HP)&lt;br&gt;
        [Single]Ellri Lord (18k HP)&lt;br&gt;
        [Single]Ellri Ritualist (14k HP) + [Single]Ellri Ritual Guard (16k HP)</string>
    <string name="map_blue_lair_text">        &lt;font color=&quot;#ff4444&quot;&gt;
        Lair Zone
        &lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Location:&lt;/font&gt; 
        Golden Wigwam Casino
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Coordinates:&lt;/font&gt; 
        300, 810
        &lt;br&gt;&lt;br&gt;&lt;font color=&quot;#ff4444&quot;&gt;Resurrection Point:&lt;/font&gt; 
        Agartha Entrance&lt;br&gt;&lt;br&gt;
        &lt;font color=&quot;#ff4444&quot;&gt;Mobs:&lt;/font&gt;&lt;br&gt; 
        [Single]Safety Hazard (48k HP)&lt;br&gt;
        [Single]Slate Giant (71k HP)&lt;br&gt;
        [Group]Deconstructed Worker (3k HP)</string>
</resources>