<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_basic_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/picture_title_basic_information"
            style="@style/TopLogo"
            android:src="@drawable/basic_information" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START What are Signets? -->

        <Button
            android:id="@+id/visibility_signet_info"
            style="@style/ViewToggleButton"
            android:text="@string/what_are_signets" />

        <TextView
            android:id="@+id/what_are_signets_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/signet_info_part1"
            style="@style/StandardTextAppearance"
            android:visibility="gone" />
        <!-- android:text="@string/basic_information_part1" -->


        <!-- weapon with a free Signet Slot -->

        <ImageView
            android:id="@+id/picture_free_signet_slot"
            style="@style/TopLogo"
            android:src="@drawable/weapon_empty_signet_slot"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signets_three_types"
            style="@style/StandardTextAppearance"
            android:text="@string/basic_information_part2"
            android:visibility="gone" />

        <!-- 10 green signets > 1 blue signet			10 blue signet > 1 purple signet -->

        <ImageView
            android:id="@+id/picture_10signet10"
            style="@style/TopLogo"
            android:src="@drawable/upgradesignets"
            android:visibility="gone" />

        <TextView
            android:id="@+id/note_overview"
            style="@style/StandardTextAppearance"
            android:text="@string/basic_information_part3"
            android:visibility="gone" />

        <Button
            android:id="@+id/visibility_signet_info_close"
            style="@style/ViewToggleButton"
            android:text="@string/what_are_signets_close"
            android:visibility="gone" />
        <!-- END What are Signets? -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START Signet attaching -->

        <Button
            android:id="@+id/visibility_attach_signet"
            style="@style/ViewToggleButton"
            android:text="@string/attach" />

        <!-- signet attaching text beginns here -->

        <TextView
            android:id="@+id/attach_signet_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/attach_signet_text"
            style="@style/StandardTextAppearance"
            android:text="@string/basic_information_part4"
            android:visibility="gone" />

        <!-- signet item assembly window -->

        <ImageView
            android:id="@+id/picture_singet_item_assembly_window"
            style="@style/TopLogo"
            android:src="@drawable/item_signet_assamble"
            android:visibility="gone" />

        <TextView
            android:id="@+id/overwrite_signet_text"
            style="@style/StandardTextAppearance"
            android:text="@string/basic_information_part5"
            android:visibility="gone" />

        <Button
            android:id="@+id/visibility_attach_signet_close"
            style="@style/ViewToggleButton"
            android:text="@string/attach_close"
            android:visibility="gone" />

        <!-- END Signets attaching -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START Where do I find Signets -->

        <Button
            android:id="@+id/visibility_where_do_i_get_signets"
            style="@style/ViewToggleButton"
            android:text="@string/where_do_i_get_signets" />

        <TextView
            android:id="@+id/where_do_i_get_signets_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/find_signets_text"
            style="@style/StandardTextAppearance"
            android:text="@string/find_signets_text"
            android:visibility="gone" />

        <!-- bank + mail in london -->

        <ImageView
            android:id="@+id/bank_mail_london"
            style="@style/TopLogo"
            android:src="@drawable/buy_signets_london2"
            android:visibility="gone" />

        <Button
            android:id="@+id/visibility_where_do_i_get_signets_close"
            style="@style/ViewToggleButton"
            android:text="@string/where_do_i_get_signets_close"
            android:visibility="gone" />

        <!-- END Where do I find Signets -->
    </LinearLayout>

</ScrollView>