<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_solomon_farming_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            style="@style/TopLogo"
            android:src="@drawable/solomon_island" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START Kingsmouth -->

        <Button
            android:id="@+id/kingsmouth_farming_locations"
            style="@style/ViewToggleButton"
            android:text="@string/kingsmouth_farming_locations" />

        <TextView
            android:id="@+id/kingsmouth_farming_locations_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/map_kingsmouth_nm_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_kingsmouth_nm_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openKingMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <LinearLayout
            style="@style/SeparatorLinearLayout"
            android:visibility="gone" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <TextView
            android:id="@+id/map_kingsmouth_nm_text2"
            style="@style/StandardTextAppearance"
            android:text="@string/map_kingsmouth_nm_text2"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openKingMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <LinearLayout
            style="@style/SeparatorLinearLayout"
            android:visibility="gone" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <TextView
            android:id="@+id/map_kingsmouth_lair_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_kingsmouth_lair_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openKingMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <Button
            android:id="@+id/kingsmouth_farming_locations_close"
            style="@style/ViewToggleButtonRight"
            android:text="@string/kingsmouth_farming_locations_close"
            android:visibility="gone" />

        <!-- END Kingsmouth -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START Savage Coast -->

        <Button
            android:id="@+id/savage_farming_locations"
            style="@style/ViewToggleButton"
            android:text="@string/savage_farming_locations" />

        <TextView
            android:id="@+id/savage_farming_locations_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/map_savage_nm_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_savage_nm_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openSavageMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <LinearLayout
            style="@style/SeparatorLinearLayout"
            android:visibility="gone" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <TextView
            android:id="@+id/map_savage_lair_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_savage_lair_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openSavageMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <Button
            android:id="@+id/savage_farming_locations_close"
            style="@style/ViewToggleButtonRight"
            android:text="@string/savage_farming_locations_close"
            android:visibility="gone" />

        <!-- END Savage Coast -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START Blue Mountain -->

        <Button
            android:id="@+id/blue_farming_locations"
            style="@style/ViewToggleButton"
            android:text="@string/blue_farming_locations" />

        <TextView
            android:id="@+id/blue_farming_locations_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/map_blue_nm_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_blue_nm_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openBlueMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <LinearLayout
            style="@style/SeparatorLinearLayout"
            android:visibility="gone" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <TextView
            android:id="@+id/map_blue_lair_text"
            style="@style/StandardTextAppearance"
            android:text="@string/map_blue_lair_text"
            android:visibility="gone" />

        <Button
            style="@style/ViewToggleButton"
            android:onClick="openBlueMapMarked"
            android:text="@string/framing_locations_go_to_map_activity"
            android:visibility="gone" />

        <Button
            android:id="@+id/blue_farming_locations_close"
            style="@style/ViewToggleButtonRight"
            android:text="@string/blue_farming_locations_close"
            android:visibility="gone" />

        <!-- END Blue Mountain -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>
    </LinearLayout>

</ScrollView>