<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_farming_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            style="@style/TopLogo"
            android:src="@drawable/farming_locations" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <!-- START BASICS -->

        <Button
            android:id="@+id/basics_farming_locations"
            style="@style/ViewToggleButton"
            android:text="@string/basics_farming_locations" />

        <TextView
            android:id="@+id/basics_farming_locations_blank"
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/basics_farming_locations_text"
            style="@style/StandardTextAppearance"
            android:text="@string/basics_farming_locations_text"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/special_buffs"
            style="@style/ImageFarmingLocation"
            android:src="@drawable/special_buffs"
            android:visibility="gone" />

        <TextView
            android:id="@+id/zone_details_text"
            style="@style/StandardTextAppearance"
            android:text="@string/zone_details_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/visibility_farming_locations_close"
            style="@style/ViewToggleButtonRight"
            android:text="@string/farming_locations_close"
            android:visibility="gone" />
        <!-- END BASICS -->

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startSolomonKingFarm"
            android:text="@string/solomon_king_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startSolomonSavageFarm"
            android:text="@string/solomon_savage_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startSolomonBlueFarm"
            android:text="@string/solomon_blue_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startEgyptScorchedFarm"
            android:text="@string/egypt_scorched_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startEgyptSunFarm"
            android:text="@string/egypt_sun_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startTransFarmFarm"
            android:text="@string/trans_farm_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startTransForestFarm"
            android:text="@string/trans_forest_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>

        <Button
            style="@style/ViewToggleButton"
            android:onClick="startTransFangsFarm"
            android:text="@string/trans_fangs_titel" />

        <TextView
            android:layout_width="@dimen/blank_width_size"
            android:layout_height="@dimen/blank_height_size"
            android:visibility="visible" />

        <LinearLayout style="@style/SeparatorLinearLayout" >

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>

            <View style="@style/SeparatorWhiteSpaceBorder" >
            </View>

            <View style="@style/SeparatorBlackSpaceBorder" >
            </View>
        </LinearLayout>
    </LinearLayout>

</ScrollView>